--- a/style.css
+++ b/style.css
@@ -302,6 +302,8 @@ max-width: 680px;
  footer{
     box-sizing: border-box;
     padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     height: 200px;
     display: grid;
     place-items: center;
